[tool.poetry]
name = "kahve"
version = "0.1.0"
description = ""
authors = ["tugberk.arkose <tugberk.arkose@aizon.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py2app = "^0.28.5"
rumps = "^0.4.0"
pyautogui = "^0.9.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pomodoro = "kahve.py"